--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
   <h1>WDD 330 Assignments</h1>
 
-  <img src="me.jpg" alt="a picture of me"><br>
+  <img src="./me.jpg" alt="a picture of me"><br>
 
   <ul>
     <li></li><a href="./week01/assign01.html">Week 01</a></li>
