--- a/week01/assign01.html
+++ b/week01/assign01.html
@@ -8,7 +8,7 @@
 <body>
   <ul style="text-align:center;" list-style-position: inside;>
     
-  <h1>This will be assignment and assignmet</h1>
+  <h1>This is my Week 1 assignments</h1>
   <li></li><a href="./story_editor.html">Story Editor</a></li>
   <li></li><a href="./notes.html">notes</a></li>
   <li></li><a href="../index.html">WDD 330</a></li>
