--- a/week02/assign02.html
+++ b/week02/assign02.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Week 1</title>
+    <title>Week 2</title>
 </head>
 <body>
   <ul style="text-align:center;" list-style-position: inside;>
     
-  <h1>This will be an assignmet</h1>
+  <h1>Week 2 assignments</h1>
+  <li></li><a href="./rainbow.html">rainbow.html</a></li>
+  <li></li><a href="./Team Meeting/solution.html">Team Meeting</a></li>
+  <li></li><a href="./quiz/index.html">Ninja Quiz</a></li>
+  <li></li><a href="./notes.html">notes</a></li>
   <li></li><a href="../index.html">WDD 330</a></li>
-
  </body>
 </html>
