--- a/week03/notes 02.html
+++ b/week03/notes 02.html
@@ -8,10 +8,10 @@
 <body>
   <ul style="text-align:center;" list-style-position: inside;>
     
-  <h1>Week 3 assignments</h1>
- <!-- <li></li><a href="./rainbow.html">rainbow.html</a></li> -->
-  <li></li><a href="./index-START.html">Team Meeting</a></li>
-  <!--<li></li><a href="./quiz/index.html">Ninja Quiz</a></li>-->
+  <h1>Week 2 assignments</h1>
+  <li></li><a href="./rainbow.html">rainbow.html</a></li>
+  <li></li><a href="./Team Meeting/solution.html">Team Meeting</a></li>
+  <li></li><a href="./quiz/index.html">Ninja Quiz</a></li>
   <li></li><a href="./notes.html">notes</a></li>
   <li></li><a href="../index.html">WDD 330</a></li>
  </body>
