--- a/week03/assign03.html
+++ b/week03/assign03.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+l<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -12,7 +12,7 @@
  <!-- <li></li><a href="./rainbow.html">rainbow.html</a></li> -->
   <li></li><a href="./index-START.html">Team Meeting</a></li>
   <!--<li></li><a href="./quiz/index.html">Ninja Quiz</a></li>-->
-  <li></li><a href="./notes.html">notes</a></li>
+  <li></li><a href="./weekly report.html">notes</a></li>
   <li></li><a href="../index.html">WDD 330</a></li>
  </body>
 </html>
