--- a/week04/readings.html
+++ b/week04/readings.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Week 4</title>
+    <title>Week Readings</title>
 </head>
 <body>
   <ul style="text-align:center;" list-style-position: inside;>
     
-  <h1>Week 4 assignments</h1>
+  <h1>Week 4 Readings</h1>
   
  <!-- <li></li><a href="./rainbow.html">rainbow.html</a></li> -->
-  <li></li><a href="./tic.html">Tic Tac Toe Version 1</a></li>
-  <li></li><a href="./tic_table.html">Tic Tac Toe Version 2</a></li>
+  <li></li><a href="./tic.html">Bad Link</a></li>
+  <li></li><a href="./tic_table.html">Bad Link</a></li>
   <!--<li></li><a href="./quiz/index.html">Ninja Quiz</a></li>-->
-  <li></li><a href="./notes.html">Weekly Report</a></li>
-  <li></li><a href="./readings.html">Weekly Readings</a></li>
+  <li></li><a href="./notes.html">Bad Link</a></li>
+  <li></li><a href="./readings.html">Bad Link</a></li>
   <li></li><a href="../index.html">WDD 330</a></li>
  </body>
 </html>
