--- a/week04/readings.html
+++ b/week04/readings.html
@@ -9,13 +9,16 @@
   <ul style="text-align:center;" list-style-position: inside;>
     
   <h1>Week 4 Readings</h1>
-  
- <!-- <li></li><a href="./rainbow.html">rainbow.html</a></li> -->
-  <li></li><a href="./tic.html">Bad Link</a></li>
-  <li></li><a href="./tic_table.html">Bad Link</a></li>
-  <!--<li></li><a href="./quiz/index.html">Ninja Quiz</a></li>-->
-  <li></li><a href="./notes.html">Bad Link</a></li>
-  <li></li><a href="./readings.html">Bad Link</a></li>
+ 
   <li></li><a href="../index.html">WDD 330</a></li>
+<p></p>
+<p></p>
+  <div>
+    <object data="test.pdf" type="application/pdf" width="1000" height="1300">
+      alt : <a href="readings.pdf">test.pdf</a> 
+    </div> 
+
+</object>
+</div> 
  </body>
 </html>
