--- a/week04/readings.html
+++ b/week04/readings.html
@@ -14,7 +14,7 @@
 <p></p>
 <p></p>
   <div>
-    <object data="test.pdf" type="application/pdf" width="1000" height="1300">
+    <object data="readings 04.pdf" type="application/pdf" width="1000" height="1300">
       alt : <a href="readings.pdf">test.pdf</a> 
     </div> 
 
