--- a/week04/readings.html
+++ b/week04/readings.html
@@ -15,7 +15,7 @@
 <p></p>
   <div>
     <object data="readings 04.pdf" type="application/pdf" width="1000" height="1300">
-      alt : <a href="readings.pdf">test.pdf</a> 
+      alt : <a href="readings 04.pdf">test.pdf</a> 
     </div> 
 
 </object>
