--- a/week04/readings.html
+++ b/week04/readings.html
@@ -8,7 +8,7 @@
 <body>
   <ul style="text-align:center;" list-style-position: inside;>
     
-  <h1>Week 4 Readings</h1>
+  <h1>Week 4 Readings 04</h1>
  
   <li></li><a href="../index.html">WDD 330</a></li>
 <p></p>
