--- a/week05/assign05.html
+++ b/week05/assign05.html
@@ -8,7 +8,7 @@
 <body>
   <ul style="text-align:center;" list-style-position: inside;>
     
-  <h1>This will be an assignmet</h1>
+  <h1>This will be an assignment for Week 05</h1>
   <li></li><a href="../index.html">WDD 330</a></li>
   <li></li><a href="./teamMeeting/index.html">Team Meeting</a></li>  
 
