--- a/week05/assign05.html
+++ b/week05/assign05.html
@@ -11,6 +11,7 @@
   <h1>This will be an assignment for Week 05</h1>
   <li></li><a href="../index.html">WDD 330</a></li>
   <li></li><a href="./teamMeeting/index.html">Team Meeting</a></li>  
+  <li></li><a href="./notes.html">Weekly notes</a></li>
 
  </body>
 </html>
