--- a/week05/assign05.html
+++ b/week05/assign05.html
@@ -12,7 +12,7 @@
   <li></li><a href="../index.html">WDD 330</a></li>
   <li></li><a href="./teamMeeting/index.html">Team Meeting</a></li>  
   <li></li><a href="./notes.html">Weekly notes</a></li>
-  <li></li><a href="./todo/todo.html">ToDo</a></li>
+  <li></li><a href="./notes.html">ToDo</a></li>
  </body>
 </html>
    
