--- a/week05/toDo/todo.html
+++ b/week05/toDo/todo.html
@@ -39,7 +39,7 @@
 
     <header>
         <h2>Steven's ToDo </h2>
-        <a href='https://mymuzes.github.io/week05/assign05.html'>Back to Index</a>
+        <a href='./assign05.html'>Back to Index</a>
         <hr>
     </header>
     <div class='container' onmousemove="countToDo();">
