--- a/week06/assign06.html
+++ b/week06/assign06.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Week 1</title>
+    <title>Week 6</title>
 </head>
-<body>
+<body style="background-color:rgb(173, 172, 199);">
   <ul style="text-align:center;" list-style-position: inside;>
     
   <h1>This will be an assignmet</h1>
