--- a/week06/assign06.html
+++ b/week06/assign06.html
@@ -8,8 +8,8 @@
 <body style="background-color:rgb(173, 172, 199);">
   <ul style="text-align:center;" list-style-position: inside;>
     
-  <h1>This will be an assignmet</h1>
+  <h1>This will be an assignmet Week 06</h1>
   <li></li><a href="../index.html">WDD 330</a></li>
-
+<p>Just update portfolio to better show back ground colors and location of ToDo Assgnment<p/>
  </body>
 </html>
