--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Steven Bassett Assignments</title>
 </head>
-<body style="background-color:rgb(173, 172, 199);>
+<body style="background-color:rgb(173, 172, 199);">
   <ul style="text-align:center;" list-style-position: inside;>
     
   <h1>WDD 330 Assignments</h1>
