--- a/week07/GreatHikes_online/hiking-complete.html
+++ b/week07/GreatHikes_online/hiking-complete.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Great Hikes (dynamic DOM example)</title>
+    <title>Great Hikes</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <style>
       body {
