--- a/week07/assign07.html
+++ b/week07/assign07.html
@@ -3,13 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Week 1</title>
+    <title>Week 5</title>
 </head>
 <body>
   <ul style="text-align:center;" list-style-position: inside;>
     
-  <h1>This will be an assignmet</h1>
+  <h1>This will be an assignment for Week 05</h1>
   <li></li><a href="../index.html">WDD 330</a></li>
-
+  <li></li><a href="./teamMeeting/index.html">Team Meeting</a></li>  
+  <li></li><a href="./notes.html">Weekly notes</a></li>
+  <li></li><a href="./reading.html">Reading notes</a></li>
+  <li></li><a href="toDo/todo.html">ToDo</a></li>
  </body>
 </html>
+   
