--- a/week07/assign07.html
+++ b/week07/assign07.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Week 5</title>
+    <title>Week 7</title>
 </head>
 <body>
   <ul style="text-align:center;" list-style-position: inside;>
@@ -13,7 +13,7 @@
   <li></li><a href="./teamMeeting/index.html">Team Meeting</a></li>  
   <li></li><a href="./notes.html">Weekly notes</a></li>
   <li></li><a href="./reading.html">Reading notes</a></li>
-  <li></li><a href="toDo/todo.html">ToDo</a></li>
+  <li></li><a href="./hikes/index.html">Hikes with comment</a></li>
  </body>
 </html>
    
