--- a/week07/assign07.html
+++ b/week07/assign07.html
@@ -10,7 +10,7 @@
     
   <h1>This will be an assignment for Week 05</h1>
   <li></li><a href="../index.html">WDD 330</a></li>
-  <li></li><a href="./teamMeeting/index.html">Team Meeting</a></li>  
+  <li></li><a href="./hikes/index.html">Team Meeting  Hikes</a></li>  
   <li></li><a href="./notes.html">Weekly notes</a></li>
   <li></li><a href="./reading.html">Reading notes</a></li>
   <li></li><a href="./hikes/index.html">Hikes with comment</a></li> 
