--- a/week07/notes.html
+++ b/week07/notes.html
@@ -23,7 +23,7 @@
 <p></p>
 <p></p>
 <div>
-  <object data="notes.pdf" type="application/pdf" width="1000" height="1300">
+  <object data="ch 11 functions.pdf" type="application/pdf" width="1000" height="1300">
     alt : <a href="notes.pdf">test.pdf</a> 
   </div> 
 
