--- a/week07/reading.html
+++ b/week07/reading.html
@@ -23,9 +23,12 @@
 <p></p>
 <p></p>
 <div>
-  <object data="Reading notes.pdf" type="application/pdf" width="1000" height="1300">
+  <object data="CH 13 ajax.pdf" type="application/pdf" width="1000" height="1300">
     alt : <a href="Reading notes.pdf">Reading notes.pdf</a> 
   </div> 
+ <object data="CH 13 ajax.pdf" type="application/pdf" width="1000" height="1300">
+    alt : <a href="Reading notes.pdf">Reading notes.pdf</a> 
+  </div>  
 
 </object>
 </div> 
