--- a/week08/assign08.html
+++ b/week08/assign08.html
@@ -10,7 +10,7 @@
     
   <h1>This will be an assignmet</h1>
   <li></li><a href="../index.html">WDD 330</a></li>
-  <li></li><a href="../PokemonList/index.html">WDD 330</a></li>
+  <li></li><a href="./PokemonList/index.html">WDD 330</a></li>
 
  </body>
 </html>
