--- a/week08/assign08.html
+++ b/week08/assign08.html
@@ -11,6 +11,7 @@
   <h1>This will be an assignmet</h1>
   <li></li><a href="../index.html">WDD 330</a></li>
   <li></li><a href="./PokemonList/index.html">Pokeman</a></li>
+  <h2>Readings</h2>
 
  </body>
 </html>
