--- a/week08/assign08.html
+++ b/week08/assign08.html
@@ -8,7 +8,7 @@
 <body>
   <ul style="text-align:center;" list-style-position: inside;>
     
-  <h1>This will be an assignmet</h1>
+  <h1>This will be an assignmet for Week 08</h1>
   <li></li><a href="../index.html">WDD 330</a></li>
   <li></li><a href="./PokemonList/index.html">Pokeman</a></li>
   <h2>Readings</h2>
