--- a/week08/assign08.html
+++ b/week08/assign08.html
@@ -12,6 +12,6 @@
   <li></li><a href="../index.html">WDD 330</a></li>
   <li></li><a href="./PokemonList/index.html">Pokeman</a></li>
   <h2>Readings</h2>
-   <li></li><a href="./PokemonList/index.html">Pokeman</a></li>  
+   <li></li><a href="./Transistions/transitions_transformations_size.html">Transitions Transformations Size</a></li>  
  </body> 
 </html>
