--- a/week08/assign08.html
+++ b/week08/assign08.html
@@ -13,5 +13,7 @@
   <li></li><a href="./PokemonList/index.html">Pokeman</a></li>
   <h2>Readings</h2> 
    <li></li><a href="./Transistions/transitions_transformations_size.html">Transitions Transformations Size</a></li>  
+   <li></li><a href="./Transistions/transitions_transformations_timing.html">Transitions Transformations Timing</a></li> 
+   <li></li><a href="./Transistions/transitions_transformations_size.html">Transitions Transformations Size</a></li> 
  </body> 
 </html>
