--- a/week08/assign08.html
+++ b/week08/assign08.html
@@ -15,5 +15,7 @@
   <h2>Readings</h2>    
    <li></li><a href="./Transistions/transitions_transformations_size.html">Transitions Transformations Size</a></li>  
    <li></li><a href="./Transistions/transitions_transformations_timing.html">Transitions Transformations Timing</a></li> 
+
+   <li></li><a href="./Canvas/DragAndDrop.html">DragAndDrop</a></li>
  </body> 
 </html>
