--- a/week08/assign08.html
+++ b/week08/assign08.html
@@ -13,9 +13,17 @@
   <li></li><a href="../index.html">WDD 330</a></li>
   <li></li><a href="./PokemonList/index.html">Pokeman</a></li>
   <h2>Readings</h2>    
-   <li></li><a href="./Transistions/transitions_transformations_size.html">Transitions Transformations Size</a></li>  
-   <li></li><a href="./Transistions/transitions_transformations_timing.html">Transitions Transformations Timing</a></li> 
+  <li></li><a href="./Transistions/transitions_transformations_size.html">Transitions Transformations Size</a></li>  
+  <li></li><a href="./Transistions/transitions_transformations_timing.html">Transitions Transformations Timing</a></li> 
 
-   <li></li><a href="./Canvas/DragAndDrop.html">DragAndDrop</a></li>
+  <li></li><a href="./Canvas/DragAndDrop.html">DragAndDrop</a></li>
+  <li></li><a href="./Canvas/MyfirstSVG.html">MyfirstSVG</a></li>
+  <li></li><a href="./Canvas/SVG Circle.html">SVG Circle</a></li>
+  <li></li><a href="./Canvas/SVG Ellipse.html">SVG Ellipse</a></li>
+  <li></li><a href="./Canvas/SVG Text.html">SVG Text</a></li>
+  <li></li><a href="./Canvas/DragAndDrop.html">DragAndDrop</a></li>
+  <li></li><a href="./Canvas/DragAndDrop.html">DragAndDrop</a></li>
+  <li></li><a href="./Canvas/DragAndDrop.html">DragAndDrop</a></li>
+  <li></li><a href="./Canvas/DragAndDrop.html">DragAndDrop</a></li>
  </body> 
 </html>
