--- a/week08/assign08.html
+++ b/week08/assign08.html
@@ -21,9 +21,13 @@
   <li></li><a href="./Canvas/SVG Circle.html">SVG Circle</a></li>
   <li></li><a href="./Canvas/SVG Ellipse.html">SVG Ellipse</a></li>
   <li></li><a href="./Canvas/SVG Text.html">SVG Text</a></li>
-  <li></li><a href="./Canvas/DragAndDrop.html">DragAndDrop</a></li>
-  <li></li><a href="./Canvas/DragAndDrop.html">DragAndDrop</a></li>
-  <li></li><a href="./Canvas/DragAndDrop.html">DragAndDrop</a></li>
+  <li></li><a href="./Canvas/SVG in HTML.html">SVG in HTML</a></li>
+  <li></li><a href="./Canvas/SVG rectangle.html">SVG rectangle</a></li>
+  <li></li><a href="./Canvas/SVGLine.html">SVGLine</a></li>
+  <li></li><a href="./Canvas/SVGPath.html">SVGPath.html</a></li>
+  <li></li><a href="./Canvas/SVGPolyLine.htmll">SVGPolyLine</a></li>
+  <li></li><a href="./Canvas/SVGPolygon.html">SVGPolygon</a></li>
+  <li></li><a href="./Canvas/SVGStrokeProperties.html">SVGStrokeProperties</a></li>
   <li></li><a href="./Canvas/DragAndDrop.html">DragAndDrop</a></li>
  </body> 
 </html>
