--- a/week08/assign08.html
+++ b/week08/assign08.html
@@ -25,9 +25,9 @@
   <li></li><a href="./Canvas/SVG rectangle.html">SVG rectangle</a></li>
   <li></li><a href="./Canvas/SVGLine.html">SVGLine</a></li>
   <li></li><a href="./Canvas/SVGPath.html">SVGPath.html</a></li>
-  <li></li><a href="./Canvas/SVGPolyLine.htmll">SVGPolyLine</a></li>
+  <li></li><a href="./Canvas/SVGPolyLine.html">SVGPolyLine</a></li>
   <li></li><a href="./Canvas/SVGPolygon.html">SVGPolygon</a></li>
   <li></li><a href="./Canvas/SVGStrokeProperties.html">SVGStrokeProperties</a></li>
-  <li></li><a href="./Canvas/DragAndDrop.html">DragAndDrop</a></li>
+  
  </body> 
 </html>
