--- a/week08/Canvas/SVG Text.html
+++ b/week08/Canvas/SVG Text.html
@@ -6,6 +6,10 @@
   <text x="0" y="15" fill="red">I love SVG!</text>
   Sorry, your browser does not support inline SVG.
 </svg>
+
+<svg height="60" width="200">
+    <text x="0" y="15" fill="red" transform="rotate(30 20,40)">I love SVG</text>
+</svg>
  
 </body>
 </html>
