--- a/week09/assign09.html
+++ b/week09/assign09.html
@@ -18,7 +18,7 @@
   <li></li><a href="./Code Examples/windowObjectProperty.html">windowObjectProperty.html</a></li>
   <li></li><a href="./Code Examples/windowOpen.html">windowOpen.html</a></li>
   <li></li><a href="./Code Examples/windowSize.html">windowSize.html</a></li>
-
+  <li></li><a href="./getLocationApi.html">getLocationApi.html</a></li>
 
 
 
