--- a/week10/assign10.html
+++ b/week10/assign10.html
@@ -21,7 +21,7 @@
   <li></li><a href="./fruit-start letter length.html">fruit-start letter length.html</a></li>
   <li></li><a href="./full-example.html">full-example.html</a></li>
   <li></li><a href="./detailed-custom-validation.html">detailed-custom-validation.html</a></li>
-
+  <li></li><a href="./1-fetch-content.html">1-fetch-content.html</a></li>
 
 
   <h2>Team Meeting code example</h2>   
