--- a/week10/assign10.html
+++ b/week10/assign10.html
@@ -22,6 +22,7 @@
   <li></li><a href="./full-example.html">full-example.html</a></li>
   <li></li><a href="./detailed-custom-validation.html">detailed-custom-validation.html</a></li>
   <li></li><a href="./1-fetch-content.html">1-fetch-content.html</a></li>
+  <li></li><a href="./earthquake/index.html">Example Earthquake api that uses fetch</a></li>
 
 
 
