--- a/week10/assign10.html
+++ b/week10/assign10.html
@@ -27,18 +27,7 @@
 
 
   <h2>Team Meeting code example</h2>   
-<!--
-  <li></li><a href="./notes.html">Team Notes</a></li>
-  <li></li><a href="./DrumKit/index-START.html">index-START.html</a></li>
-  <li></li><a href="./DrumKit/index-START2.html">index-START2.html</a></li>
-  <li></li><a href="./DrumKit/index-START3.html">index-START3.html</a></li>
-  <li></li><a href="./DrumKit/index-START4.html">index-START4.html</a></li>
-  <li></li><a href="./DrumKit/index-START4.html">index-START5.html</a></li>
-  <li></li><a href="./DrumKit/index-START5.html">index-START6.html</a></li>
-  <li></li><a href="./DrumKit/index-START6.html">index-START7.html</a></li>
-  <li></li><a href="./DrumKit/index-START7.html">index-START8.html</a></li>
-  <li></li><a href="./DrumKit/index-START8.html">index-START9.html</a></li>
--->
+  <li></li><a href="./earthquake/index.html">Example Earthquake api that uses fetch</a></li>
   
  </body> 
 </html>
