--- a/week14/assign14.html
+++ b/week14/assign14.html
@@ -8,7 +8,7 @@
 <body>
   <ul style="text-align:center;" list-style-position: inside;>
     
-  <h1>This will be an assignmet</h1>
+  <h1>This is my final submission assighnment</h1>
   <li></li><a href="../index.html">WDD 330</a></li>
 
  </body>
