--- a/week14/assign14.html
+++ b/week14/assign14.html
@@ -10,6 +10,12 @@
     
   <h1>This is my final submission assighnment</h1>
   <li></li><a href="../index.html">WDD 330</a></li>
+  <h1>This will be an assignment for Week 07</h1>
+  <li></li><a href="../index.html">WDD 330</a></li>
+  <li></li><a href="./hikes/index.html">Team Meeting  Hikes</a></li>  
+  <li></li><a href="./notes.html">Weekly notes</a></li>
+  <li></li><a href="./reading.html">Reading notes</a></li>
+  <li></li><a href="./hikes/index.html">Hikes with comment</a></li> 
 
  </body>
 </html>  
