--- a/week14/assign14.html
+++ b/week14/assign14.html
@@ -9,7 +9,7 @@
   <ul style="text-align:center;" list-style-position: inside;>
     
   <h1>This is my final submission assighnment</h1>
-  <li></li><a href="../moviewebsite/index.html">WDD 330</a></li>
+  <li></li><a href="https://mymuzes.github.io/week14/moviewebsite/index.html">WDD 330</a></li>
   <h1>This will be an assignment for Week 07</h1>
   <li></li><a href="../index.html">WDD 330</a></li>
   <li></li><a href="./hikes/index.html">Team Meeting  Hikes</a></li>  
