--- a/week14/assign14.html
+++ b/week14/assign14.html
@@ -10,10 +10,10 @@
   <h1>This will be an assignment for Week 14</h1>
   <li></li><a href="https://mymuzes.github.io/week14/moviewebsite/index.html">Movies Search</a></li>
   <li></li><a href="../index.html">WDD 330</a></li>
-  <li></li><a href="./hikes/index.html">Team Meeting  Hikes</a></li>  
-  <li></li><a href="./notes.html">Weekly notes</a></li>
-  <li></li><a href="./reading.html">Reading notes</a></li>
-  <li></li><a href="./hikes/index.html">Hikes with comment</a></li> 
+    <div>
+  <object data="SBassett Final portfolio submission.pdf" type="application/pdf" width="1000" height="1300">
+    alt : <a href="SBassett Final portfolio submission.pdf">test.pdf</a> 
+  </div> 
 
 
 
